# myria3d

./: .buildinfo  .dockerignore  .env_example  .flake8  .gitignore  .pre-commit-config.yaml  0001-Won-t-try-to-use-a-.las-file-that-isn-t-in-the-direc.patch  =0.17  CHANGELOG.md  Dockerfile  LICENCE.md  LICENSE  PureForestID-mini-single-tree-split.csv  PureForestID-mini-split.csv  PureForestID-prediction-by-polygon.ipynb  PureForestID-valtest-union.csv  PureForestV2-Compare-Polygon-CM.ipynb  PureForestV2-mini-split.csv  PureForestV2-valtest-union.csv  README.md  dockerfile  environment.yml  filter-split-metadata.ipynb  foo.py  genindex.html  index.html  introduction.html  objects.inv  package_metadata.yaml  prepare_hdf5.sh  py-modindex.html  pyproject.toml  run.py  search.html  searchindex.js  setup.cfg  setup.py  train.sh
.devcontainer/: devcontainer.json
_modules/: index.html  run.html
_sources/: index.rst.txt  introduction.md.txt
_static/: documentation_options.js
apidoc/: configs.html  lidar_multiclass.callbacks.html  lidar_multiclass.data.html  lidar_multiclass.datamodules.html  lidar_multiclass.model.html  lidar_multiclass.models.html  lidar_multiclass.models.modules.html  lidar_multiclass.predict.html  lidar_multiclass.train.html  lidar_multiclass.utils.html  myria3d.callbacks.html  myria3d.data.html  myria3d.model.html  myria3d.models.modules.html  myria3d.pctl.html  myria3d.utils.html  run.html  scripts.html
background/: data_optimization.html  general_design.html  interpolation.html
bash/: schedule.sh
configs/: config.yaml
default_files_for_predict/: default_config.yaml
docs/: Makefile  requirements.txt  requirements_torch_deps.txt
guides/: development.html  train_new_model.html
how_to/: add_new_data_signature.html  development.html  train_new_model.html
img/: M5V1.7_Pareto_3D_front.html
install/: torch_sparse-0.6.14-cp39-cp39-linux_x86_64.whl
lidar_multiclass/: __init__.py  predict.py  train.py
myria3d/: _version.py  predict.py  train.py
notebooks/: 1.0-cga-lidar-dataset-definition.ipynb  11.0-cga-calibration.ipynb  2.0-cga-dataloader-from-iterabledataset.ipynb  3.0-cga-lasfile-add-extra-dimension.ipynb  4.0-cga-pdal-writer.ipynb  5.0-cga-describe-dataset.ipynb  6.0-cga-geopandas-aggregate-in-shape.ipynb  6.0-cga-geopandas-vectorize.ipynb  6.0-cga-geopandas.ipynb  7.0-cga-pareto-fronts-confirm-refute.ipynb  7.0-cga-pareto-fronts-ss-auto.ipynb  7.0-cga-pareto_fronts.ipynb  8.1-cga-randlanet-aRI0U.py  Pareto_3D_front.html  (+9 more)
(+405 files in other folders)
