[metadata]
project_name = "Segmentation Validation Model"
author = "Charles GAYDON"
contact = "charles.gaydon@gmail.com"
license_file = LICENSE
description_file = README.md


[isort]
line_length = 99
profile = black
filter_files = True


[flake8]
max_line_length = 99
show_source = True
format = pylint
ignore =
    F401  # Module imported but unused
    W504  # Line break occurred after a binary operator
    F841  # Local variable name is assigned to but never used
    F403  # from module import *
    E501  # Line too long
    E741  # temp ignore
    F405  # temp ignore
    W503  # temp ignore
    F811  # temp ignore
    E266  # temp ignore
    E262  # temp ignore
    W605  # temp ignore
    E722  # temp ignore
    F541  # temp ignore
    W291  # temp ignore
    E401  # temp ignore
    E402  # temp ignore
    W293  # temp ignore

exclude =
    .git
    __pycache__
    data/*
    tests/*
    notebooks/*
    logs/*
    /home/MDaab/.local/lib/python3.9/
    /home/MDaab/anaconda3/

[tool:pytest]
python_files = tests/*
log_cli = True
markers =
    slow
addopts =
    --durations=0
    --strict-markers
    --doctest-modules
filterwarnings =
    ignore::DeprecationWarning
    ignore::UserWarning
