[metadata]
project_name = "Lidar-Deep-Segmentation"
author = "Charles GAYDON"
contact = "charles.gaydon@gmail.com"
license_file = LICENSE
description_file = README.md
project_template = https://github.com/ashleve/lightning-hydra-template

[isort]
line_length = 99
profile = black
filter_files = True

[flake8]
max_line_length = 140
show_source = True
format = pylint
extend-ignore = E203
exclude =
    .git
    __pycache__
    logs/*
    .vscode/*

[tool:pytest]
python_files = tests/*
log_cli = True
addopts =
    # Always use coverage when running pytest
    --cov "./lidar_multiclass/"
    # Percentage under which coverage is not reached 
    --cov-fail-under 80
    --cov-report html
    # Needed for pytest to have access to it even though hydra changes current working directory
    # and we run subprocess in some tests.
    # see https://github.com/nedbat/coveragepy/issues/512#issuecomment-399707938
    --cov-config setup.cfg
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
filterwarnings =
    ignore::DeprecationWarning
    ignore::UserWarning

[coverage:run]
branch = True
# omit = file1

[coverage:report]
show_missing = True